tests/negative/gold/deprecated_string_test.gold
tests/negative/deprecated_string_test.toit:5:17: warning: Use of 'String' as type is deprecated. Use 'string' instead
foo x/String -> String:
                ^~~~~~
tests/negative/deprecated_string_test.toit:5:7: warning: Use of 'String' as type is deprecated. Use 'string' instead
foo x/String -> String:
      ^~~~~~
tests/negative/deprecated_string_test.toit:10:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
Compilation failed.
